# IoT_UABC

./: .gitignore
E2-Device/: CMakeLists.txt
E2-Device/main/: main.c
E2-Server/: CMakeLists.txt
E2-Server/main/: main.c
T2_Protitipo-en-Red-Local/: CMakeLists.txt
T2_Protitipo-en-Red-Local/main/: main.c
T3/: CMakeLists.txt
T3/main/: main.c
T3_Setup-Inicial-y-Escaneo/main/: main.c
T4_Prototipo-IoT/: CMakeLists.txt  sdkconfig
T4_Prototipo-IoT/main/: main.c
T5_Base-de-datos/: CMakeLists.txt
T5_Base-de-datos/components/mariadb/: CMakeLists.txt
T5_Base-de-datos/components/mariadb/include/: ma_config.h  ma_sys.h  mariadb_stmt.h  mariadb_version.h  mysql.h
T5_Base-de-datos/components/mariadb/libmariadb/: ma_charset.c  ma_decimal.c  ma_default.c
T5_Base-de-datos/main/: main.c
T7-Notifications/: CMakeLists.txt
T7-Notifications/main/: main.c  smtp_client_example_main.c
T7.1 - Notificaciones/: CMakeLists.txt  sdkconfig
T7.1-Notificaciones/: CMakeLists.txt
T7.1-Notificaciones/main/: CMakeLists.txt  smtp_client_example_main.c
T7.2_Notificaciones/: CMakeLists.txt
T7.2_Notificaciones/main/: main.c
T8_MQTT/: CMakeLists.txt
T8_MQTT/main/: app_main.c
T9_Multiples-dispositivos/: CMakeLists.txt
T9_Multiples-dispositivos/main/: CMakeLists.txt  Kconfig.projbuild  config.html  main.c  myMQTT.c  myMQTT.h  myMail.c  myMail.h  mySMTP.c  mySMTP.h  my_HTTP.c  my_HTTP.h  my_MQTT.c  my_MQTT.h  my_SMTP.c  my_TCP.c  my_TCP.h  my_elements.c  my_elements.h  my_functions.c  my_functions.h  (+2 more)
Taller-2_Protitipo-en-Red-Local/: CMakeLists.txt  sdkconfig
(+4 files in other folders)
