idf_component_register(
    SRCS "libmariadb/bmove_upp.c"
         "libmariadb/get_password.c"
         "libmariadb/ma_alloc.c"
         "libmariadb/ma_array.c"
         "libmariadb/ma_charset.c"
         "libmariadb/ma_client_plugin.c.in"
         "libmariadb/ma_compress.c"
         "libmariadb/ma_context.c"
         "libmariadb/ma_decimal.c"
         "libmariadb/ma_default.c"
         "libmariadb/ma_dtoa.c"
         "libmariadb/ma_errmsg.c"
         "libmariadb/ma_hashtbl.c"
         "libmariadb/ma_init.c"
         "libmariadb/ma_io.c"
         "libmariadb/ma_list.c"
         "libmariadb/ma_ll2str.c"
         "libmariadb/ma_loaddata.c"
         "libmariadb/ma_net.c"
         "libmariadb/ma_password.c"
         "libmariadb/ma_pvio.c"
         "libmariadb/ma_sha1.c"
         "libmariadb/ma_stmt_codec.c"
         "libmariadb/ma_string.c"
         "libmariadb/ma_time.c"
         "libmariadb/ma_tls.c"
         "libmariadb/mariadb_async.c"
         "libmariadb/mariadb_charset.c"
         "libmariadb/mariadb_dyncol.c"
         "libmariadb/mariadb_lib.c"
         "libmariadb/mariadb_rpl.c"
         "libmariadb/mariadb_stmt.c"
         "libmariadb/win32_errmsg.c"
    INCLUDE_DIRS "include"
)
